First pass at getting no install version working for issue #1

--- a/MSBuild/Emscripten/Emscripten.ToolDefaults.props
+++ b/MSBuild/Emscripten/Emscripten.ToolDefaults.props
@@ -46,7 +46,7 @@
   <ItemDefinitionGroup Condition="$(VisualStudioVersion) != '10.0'">
     <ClCompile>
       <ProgramDataBaseFileName  Condition="'%(ClCompile.ProgramDataBaseFileName)'   == ''">$(IntDir)$(TargetName).pdb</ProgramDataBaseFileName>
-      <TrackerLogDirectory      Condition="'%(ClCompile.TrackerLogDirectory)'       == ''">$(TLogLocation)</TrackerLogDirectory>
+      <TrackerLogDirectory      Condition="'%(ClCompile.TrackerLogDirectory)'       == ''">$(IntDir)</TrackerLogDirectory>
     </ClCompile>
   </ItemDefinitionGroup>
 
