--- a/MSBuild/Emscripten/Emscripten.CppBuild.targets
+++ b/MSBuild/Emscripten/Emscripten.CppBuild.targets
@@ -18,7 +18,7 @@
   <ItemGroup>
     <!-- Property pages that always apply -->
     <PropertyPageSchema Include="
-        $(VCTargetsPath)\Platforms\Emscripten\Props\ProjectItemsSchema.xml;
+        $(MSBuildThisFileDirectory)\Props\ProjectItemsSchema.xml;
         $(VCTargetsPath)$(LangID)\debugger_*.xml;
         $(VCTargetsPath)$(LangID)\midl.xml;
         $(VCTargetsPath)$(LangID)\build_events.xml;
@@ -49,20 +49,20 @@
     </PropertyPageSchema>
 
     <!-- Switch view between project property based directories and environment variables -->
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Emscripten\Props\sys_dirs.xml" />
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\sys_dirs.xml" />
 
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Emscripten\Props\clang_compile.xml"/>
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\clang_compile.xml"/>
 
     <PropertyPageSchema Include="$(VCTargetsPath)$(LangID)\custom_build_step.xml;"/>
 
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Emscripten\Props\emcc_link.xml" Condition="'$(ConfigurationType)' == 'Application' or '$(ConfigurationType)' == 'HTMLPage'" />
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\emcc_link.xml" Condition="'$(ConfigurationType)' == 'Application' or '$(ConfigurationType)' == 'HTMLPage'" />
   </ItemGroup>
 
   <ItemGroup>
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Emscripten\Props\general.xml">
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\general.xml">
       <Context>Project</Context>
     </PropertyPageSchema>
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Emscripten\Props\general_ps.xml">
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\general_ps.xml">
       <Context>PropertySheet</Context>
     </PropertyPageSchema>
   </ItemGroup>
