--- a/MSBuild/Emscripten/Platform.Default.props
+++ b/MSBuild/Emscripten/Platform.Default.props
@@ -1,5 +1,5 @@
 ﻿<Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-  <Import Project="$(VCTargetsPath)\Platforms\Emscripten\Microsoft.Cpp.Emscripten.default.props" />
+  <Import Project="$(MSBuildThisFileDirectory)\Microsoft.Cpp.Emscripten.default.props" />
 
 </Project>
