--- a/MSBuild/Emscripten/PlatformToolsets/emcc/Microsoft.Cpp.Emscripten.emcc.props
+++ b/MSBuild/Emscripten/PlatformToolsets/emcc/Microsoft.Cpp.Emscripten.emcc.props
@@ -1,12 +1,16 @@
-﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">  
-  <PropertyGroup>    
+﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup Condition="'$(EmccPath)' != ''">
     <PlatformToolsetVersion>1</PlatformToolsetVersion>
     <PlatformShortName>emcc</PlatformShortName>
-    <GccCompiler Condition="'$(EMSCRIPTEN)' != ''">$(EMSCRIPTEN)\emcc.bat</GccCompiler>
-    <GccLinker Condition="'$(EMSCRIPTEN)' != ''">$(EMSCRIPTEN)\emcc.bat</GccLinker>
-    <GccLibrarian Condition="'$(EMSCRIPTEN)' != ''">$(EMSCRIPTEN)\emcc.bat</GccLibrarian>
-    <GccCompiler Condition="'$(EMSCRIPTEN)' == ''">emcc.bat</GccCompiler>
-    <GccLinker Condition="'$(EMSCRIPTEN)' == ''">emcc.bat</GccLinker>
-    <GccLibrarian Condition="'$(EMSCRIPTEN)' == ''">emcc.bat</GccLibrarian>
+    <GccCompiler>$(EmccPath)\emcc.bat</GccCompiler>
+    <GccLinker>$(EmccPath)\emcc.bat</GccLinker>
+    <GccLibrarian>$(EmccPath)\emcc.bat</GccLibrarian>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(EmccPath)' == ''">
+    <PlatformToolsetVersion>1</PlatformToolsetVersion>
+    <PlatformShortName>emcc</PlatformShortName>
+    <GccCompiler>emcc.bat</GccCompiler>
+    <GccLinker>emcc.bat</GccLinker>
+    <GccLibrarian>emcc.bat</GccLibrarian>
   </PropertyGroup>
 </Project>
