--- a/vs-android/vs-android.Build.CPPTasks.Android/2017/vs-android.Build.CPPTasks.Android.csproj
+++ b/vs-android/vs-android.Build.CPPTasks.Android/2017/vs-android.Build.CPPTasks.Android.csproj
@@ -82,7 +82,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\..\2017 DLL"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\..\..\Bin\15.0"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
