--- a/workspace/vs2017/vs-android.Build.CPPTasks.Android.csproj
+++ b/workspace/vs2017/vs-android.Build.CPPTasks.Android.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;VS2015DLL</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;VS2017DLL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -28,7 +28,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;VS2015DLL</DefineConstants>
+    <DefineConstants>TRACE;VS2017DLL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -53,28 +53,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\AdbDeploy.cs" />
-    <Compile Include="..\AntBuild.cs" />
-    <Compile Include="..\AntBuildParser.cs" />
-    <Compile Include="..\CustomToolTask.cs" />
-    <Compile Include="..\DepFileParse.cs" />
-    <Compile Include="..\GCCCompile.cs" />
-    <Compile Include="..\GCCLib.cs" />
-    <Compile Include="..\GCCLink.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\AdbDeploy.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\AntBuild.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\AntBuildParser.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\CustomToolTask.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\DepFileParse.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\GCCCompile.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\GCCLib.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\GCCLink.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\Properties\AssemblyInfo.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="..\PropXmlParse.cs" />
-    <Compile Include="..\Utils.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\PropXmlParse.cs" />
+    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
+    <EmbeddedResource Include="..\..\vs-android.Build.CPPTasks.Android\Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
@@ -82,7 +82,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\..\..\Bin\14.0"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\..\Bin\15.0"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
