--- a/pythonemcc/pythonemcc.vs2015.csproj
+++ b/pythonemcc/pythonemcc.vs2015.csproj
@@ -58,8 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\pythonemcc\Program.cs" />
-    <Compile Include="..\..\pythonemcc\Properties\AssemblyInfo.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
