--- a/vs-tool.Build.CPPTasks/vs-tool.Build.CPPTasks.vs2012.csproj
+++ b/vs-tool.Build.CPPTasks/vs-tool.Build.CPPTasks.vs2012.csproj
@@ -49,17 +49,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\AdbDeploy.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\AntBuild.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\AntBuildParser.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\CustomToolTask.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\DepFileParse.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\GCCCompile.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\GCCLib.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\GCCLink.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\Properties\AssemblyInfo.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\PropXmlParse.cs" />
-    <Compile Include="..\..\vs-android.Build.CPPTasks.Android\Utils.cs" />
+    <Compile Include="AdbDeploy.cs" />
+    <Compile Include="AntBuild.cs" />
+    <Compile Include="AntBuildParser.cs" />
+    <Compile Include="CustomToolTask.cs" />
+    <Compile Include="DepFileParse.cs" />
+    <Compile Include="GCCCompile.cs" />
+    <Compile Include="GCCLib.cs" />
+    <Compile Include="GCCLink.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropXmlParse.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -78,7 +78,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\..\Bin\11.0"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\Bin\11.0"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
