--- a/MSBuild/Android/Microsoft.Cpp.Android.targets
+++ b/MSBuild/Android/Microsoft.Cpp.Android.targets
@@ -10,11 +10,11 @@
   <Import Project="$(VCTargetsPath)\Platforms\Android\ImportBefore\*.targets" Condition="Exists('$(VCTargetsPath)\Platforms\Android\ImportBefore')" />
   <Import Project="$(VCTargetsPath)\Microsoft.CppCommon.targets" />
 
-  <UsingTask TaskName="GCCCompile" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-android.Build.CppTasks.Android.dll" />
-  <UsingTask TaskName="GCCLink" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-android.Build.CppTasks.Android.dll" />
-  <UsingTask TaskName="GCCLib" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-android.Build.CppTasks.Android.dll" />
-  <UsingTask TaskName="AntBuild" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-android.Build.CppTasks.Android.dll" />
-  <UsingTask TaskName="AdbDeploy" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-android.Build.CppTasks.Android.dll" />
+  <UsingTask TaskName="GCCCompile" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-tool.Build.CPPTasks.dll" />
+  <UsingTask TaskName="GCCLink" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-tool.Build.CPPTasks.dll" />
+  <UsingTask TaskName="GCCLib" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-tool.Build.CPPTasks.dll" />
+  <UsingTask TaskName="AntBuild" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-tool.Build.CPPTasks.dll" />
+  <UsingTask TaskName="AdbDeploy" AssemblyFile="$(VCTargetsPath)\Platforms\Android\vs-tool.Build.CPPTasks.dll" />
 
 
   <PropertyGroup>
