--- a/MSBuild/Emscripten/Microsoft.Cpp.Emscripten.targets
+++ b/MSBuild/Emscripten/Microsoft.Cpp.Emscripten.targets
@@ -2,9 +2,9 @@
   <Import Project="$(MSBuildThisFileDirectory)\ImportBefore\*.targets" Condition="Exists('$(MSBuildThisFileDirectory)\ImportBefore')" />
   <Import Project="$(VCTargetsPath)\Microsoft.CppCommon.targets" />
 
-  <UsingTask TaskName="GCCCompile" AssemblyFile="$(MSBuildThisFileDirectory)..\..\Bin\$(VisualStudioVersion)\vs-android.Build.CPPTasks.Android.dll" />
-  <UsingTask TaskName="GCCLink" AssemblyFile="$(MSBuildThisFileDirectory)..\..\Bin\$(VisualStudioVersion)\vs-android.Build.CPPTasks.Android.dll" />
-  <UsingTask TaskName="GCCLib" AssemblyFile="$(MSBuildThisFileDirectory)..\..\Bin\$(VisualStudioVersion)\vs-android.Build.CPPTasks.Android.dll" />
+  <UsingTask TaskName="GCCCompile" AssemblyFile="$(MSBuildThisFileDirectory)..\..\Bin\$(VisualStudioVersion)\vs-tool.Build.CPPTasks.dll" />
+  <UsingTask TaskName="GCCLink" AssemblyFile="$(MSBuildThisFileDirectory)..\..\Bin\$(VisualStudioVersion)\vs-tool.Build.CPPTasks.dll" />
+  <UsingTask TaskName="GCCLib" AssemblyFile="$(MSBuildThisFileDirectory)..\..\Bin\$(VisualStudioVersion)\vs-tool.Build.CPPTasks.dll" />
 
   <UsingTask TaskName="VCMessage" AssemblyName="Microsoft.Build.CppTasks.Common, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
 
